fixed h1 in css to center align

--- a/app/assets/stylesheets/products.css
+++ b/app/assets/stylesheets/products.css
@@ -53,7 +53,7 @@ body h1 {
   font-size: 12pt;
   font-weight: 200;
   font-style: normal;
-  text-align: left;
+  text-align: center;
   background-color: transparent;
 }
 body .newly_listed {
